fix the map overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -231,9 +231,7 @@ span {
 }
 
 @media only screen and (max-width: 750px) {
-  #letsConnect {
-    margin-top: 10%;
-  }
+  
   .biopic {
     width: 150px;
   }
@@ -244,15 +242,14 @@ span {
 
 #map {
   display: block;
-  height: 100%;
+  height: 400px;
   margin-left: 5%;
   margin-right: 5%;
 }
 
 #mapDiv {
-  height: 400px;
   width: 100%;
-  padding-bottom: 5%;
+  padding-bottom: 2%;
 }
 
 @media only screen and (min-width: 750px) {
